# quickbits

./: Cargo.toml  IDEAS.txt  README.md
lib/: bititer.rs  bitmanip.rs  debug_panic.rs  lib.rs  primitive_integer.rs
src/: lib.rs
