[package]
name = "quickbits"
version = "0.1.1"
description = "Fast bit manipulation routines for Rust's native integer types"
authors = ["John Zacarias Jekel <john@jekel.ca>"]
readme = "README.md"
#homepage = ""
repository = "https://git.jekel.ca/JZJ/quickbits"
license = "MIT"
edition = "2021"
#keywords = ["", ""]
#categories = ["", "", ""]
#default-run = ""
documentation = "https://docs.rs/quickbits/latest/quickbits/"

#[features]
#default = []
#nightly-features = ["nightly-features-benches"]
#nightly-features-benches = []

[lib]
name = "quickbits"
path = "lib/lib.rs"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
